[gd_scene load_steps=3 format=2]

[ext_resource path="res://theme_test.tres" type="Theme" id=1]
[ext_resource path="res://SaveGameMenu.gd" type="Script" id=2]

[node name="SaveGameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 300, 300 )
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.254902, 0.207843, 0.207843, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/ScrollContainer"]
margin_right = 66.0
margin_bottom = 54.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewSaveFileButton" type="Button" parent="ColorRect/ScrollContainer/VBoxContainer"]
margin_right = 66.0
margin_bottom = 25.0
text = "New File"

[node name="CancelButton" type="Button" parent="ColorRect/ScrollContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 66.0
margin_bottom = 54.0
text = "Cancel"
[connection signal="pressed" from="ColorRect/ScrollContainer/VBoxContainer/NewSaveFileButton" to="." method="_on_NewSaveFileButton_pressed"]
[connection signal="pressed" from="ColorRect/ScrollContainer/VBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
